<resources>
    <string name="app_name">fakestore</string>
    <string name="category">Category</string>
    <string name="price">Price</string>
    <string name="product_title">Product Title</string>
    <string name="total_price_0_00">Total Price: $0.00</string>
    <string name="back_to_products">Back to Products</string>
    <string name="back">Back</string>
    <string name="order_id_label">Order ID: %1$d</string>
    <string name="order_date_label">Order Date: %1$s</string>
    <string name="order_price_label">Order Price: %1$.2f</string>
    <string name="total_price">Total Price:</string>
    <string name="order_date">Order Date</string>
    <string name="order_id">Order ID:</string>
</resources>